--- a/frontend/public/scss/featured-product-cards.scss
+++ b/frontend/public/scss/featured-product-cards.scss
@@ -22,8 +22,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0;
-  max-width: 1440px;
+  padding: 0 !important;
+  max-width: 1440px !important;
   @include media-breakpoint-down(sm) {
     width: 100%;
     margin: 0;
