--- a/frontend/public/scss/home-page-video-component.scss
+++ b/frontend/public/scss/home-page-video-component.scss
@@ -72,6 +72,9 @@
       @include media-breakpoint-down(md) {
         padding-left: 20px;
       }
+      @include media-breakpoint-down(sm) {
+        height: 200px;
+      }
       .home-page-video-player {
         width: 100%;
         max-width: 900px;
