add form to page

--- a/frontend/public/scss/home-page/featured-product-cards.scss
+++ b/frontend/public/scss/home-page/featured-product-cards.scss
@@ -1,6 +1,5 @@
-@import "variables";
+@import "../variables";
 @import "~bootstrap/scss/bootstrap";
-@import "~video.js/dist/video-js";
 
 // TODO: `featured-product-section h1` should replace `course-section h1` in home.css on feature merge
 .featured-product-section h1 {
