--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -19,7 +19,7 @@
             </p>
         </div>
         <div class="hero-button-container">
-          <button type="button" class="hero-explore-button" href="/catalog">Explore Courses</button>
+          <a role="button" class="hero-explore-button" href="/catalog">Explore Courses</a>
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
         </div>
       </div>
     <div class="featured-product-navigation">
-      <button type="button" href="/catalog" class="view-catalog-button">View MITx Online Catalog</button>
+      <a role="button" href="/catalog" class="view-catalog-button">View MITx Online Catalog</a>
     </div>
     </div>
   </div>
