--- a/frontend/public/scss/home-page-hero.scss
+++ b/frontend/public/scss/home-page-hero.scss
@@ -125,6 +125,7 @@
           font-weight: 700;
           line-height: normal;
           border: none;
+          text-decoration: none;
           @include media-breakpoint-down(sm) {
             padding: 12px 15px;
             border-radius: 3px;
