Home Page Video Component (#1828)
* Add posthog to js

* Add posthog to python packages

* Add to models.py for cms

* Add to settings.py

* update flag in models

* something in setting is busted

* pushing the css & refactoring & moving component out in a moment

* styling done and tests look to pass except the one API test I'm fixing

* Make it so you can swap the flag back and forth without breaking

* mobile

* reformat

* hold this

* Set up with CSS for both

* fix title div flex

* basic css

* video player css

* per feedback

* reformat

* Add to models.py for cms

* update flag in models

* something in setting is busted

* pushing the css & refactoring & moving component out in a moment

* styling done and tests look to pass except the one API test I'm fixing

* Make it so you can swap the flag back and forth without breaking

* mobile

* reformat

* per feedback

* reformat again? Somehow first run missed migration

* css import changes

* remove unused folder and file

* wrong flag name

* import home_page_hero.scss file on flag

* scss changes

* scss changes

* scss changes

* scss changes & merge

* missing product page in style.js oops

* remove unused rgba var

* fix models to use an actual ID

* mobile

* add catalog to home page

* mobile footer too far down

* fixed buttons

* fix overflow

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -19,7 +19,7 @@
             </p>
         </div>
         <div class="hero-button-container">
-          <button type="button" class="hero-explore-button" href="">Explore Courses</button>
+          <a role="button" class="hero-explore-button" href="/catalog">Explore Courses</a>
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
         </div>
       </div>
     <div class="featured-product-navigation">
-      <button type="button" href="" class="view-catalog-button">View MITx Online Catalog</button>
+      <a role="button" href="/catalog" class="view-catalog-button">View MITx Online Catalog</a>
     </div>
     </div>
   </div>
@@ -125,6 +125,33 @@
       </ul>
     </div>
   </div>
+{% endif %}
+{% if show_home_page_video_component %}
+<div class="home-page-video-row d-flex justify-content-center row">
+  <div class="home-page-video-container">
+    <div class="home-page-video-description">
+      <h3>{{ page.video_component_title }}</h3>
+      <p>{{ page.video_component_description|richtext }}</p>
+    </div>
+      <div class="home-page-video-wrapper">
+        <div class="home-page-video-player">
+          {% if page.video_url %}
+            <video-js
+                  class="vjs-default-skin vjs-big-play-centered"
+                  controls
+                  data-setup="{{page.video_player_config}}"
+                  preload="metadata"
+                >
+              </video-js>
+            <div class="home-page-video-underlay">
+
+            </div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
 {% endif %}
 {% endblock %}
 {% block scripts %}
