--- a/frontend/public/scss/featured-product-cards.scss
+++ b/frontend/public/scss/featured-product-cards.scss
@@ -22,8 +22,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0;
-  max-width: 1440px;
+  padding: 0 !important;
+  max-width: 1440px !important;
   @include media-breakpoint-down(sm) {
     width: 100%;
     margin: 0;
@@ -230,7 +230,7 @@
       padding-bottom: 66px;
       display: flex;
       margin-top: 17px;
-      width: 1344px;
+      width: 100%;
       @include media-breakpoint-down(sm) {
         width: 100%;
         margin-top: 30px;
@@ -253,6 +253,7 @@
         background-color: transparent;
         align-self: center;
         margin: auto;
+        text-decoration: none;
         @include media-breakpoint-down(sm) {
           width: 100%;
           max-width: 280px;
