--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -28,6 +28,11 @@
 @import "learner-records";
 @import "order-history";
 @import "catalog";
+//@import "home-page/featured-product-cards";
+//@import "home-page/home-page-hero";
+//@import "home-page/home-page-video-component";
+//@import "home-page/home-page-contact-row";
+
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
