playing with scss

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -28,10 +28,10 @@
 @import "learner-records";
 @import "order-history";
 @import "catalog";
-//@import "home-page/featured-product-cards";
-//@import "home-page/home-page-hero";
-//@import "home-page/home-page-video-component";
-//@import "home-page/home-page-contact-row";
+@import "home-page/featured-product-cards";
+@import "home-page/home-page-hero";
+@import "home-page/home-page-video-component";
+@import "home-page/home-page-contact-row";
 
 
 body {
