Moving home-page files, pulling out unnecessary imports from styles.js and meta-product-page

--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -28,6 +28,9 @@
 @import "learner-records";
 @import "order-history";
 @import "catalog";
+@import "home-page/featured-product-cards";
+@import "home-page/home-page-hero";
+@import "home-page/home-page-video-component";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
