add conditional to hide empty video component

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 {% endif %}
-{% if show_home_page_video_component %}
+{% if show_home_page_video_component and page.video_component_title %}
 <div class="home-page-video-row d-flex justify-content-center row">
   <div class="home-page-video-container">
     <div class="home-page-video-description">
