use bodyclass to add in a special background for pages when feature flags are on

--- a/frontend/public/scss/meta-product-page.scss
+++ b/frontend/public/scss/meta-product-page.scss
@@ -5,6 +5,6 @@
 @import "product-page/product-details";
 @import "product-page/product-faculty-members";
 
-body {
+body.new-design {
     background: white;
 }
