--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% block bodyclass %}
+  {% if new_design %}
+    new-design
+  {% endif %}
+{% endblock %}
 
 {% load static wagtail_img_src feature_img_src %}
 {% load wagtailcore_tags wagtailembeds_tags %}
