--- a/frontend/public/scss/home-page/home-page-contact-row.scss
+++ b/frontend/public/scss/home-page/home-page-contact-row.scss
@@ -4,21 +4,173 @@ body.new-design {
 
 .home-page-contact-row {
   width: 100%;
+  margin-top: 78px;
+  margin-bottom: -10%;
+  display: flex;
+  justify-content: center;
+  background-color: $home-page-grey-lite;
+  .home-page-contact-col {
+    width: 50%;
+    border: thin solid $home-page-border-grey;
+    border-left: none;
+  }
   .home-page-contact-row-container {
     max-width: 1440px;
+    width: 100%;
     display: flex;
-    margin-top: 140px;
-    margin-bottom: -80px;
     justify-content: space-between;
-
     .home-page-hbspt-form-wrapper {
-      width: 50%;
+      padding-right: 95px;
+      padding-top: 40px;
+      .home-page-hbspt-form-heading-row {
+        display: flex;
+        flex-direction: row;
+        align-content: space-around;
+        h3 {
+          color: $home-page-header-blue;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          margin: auto;
+        }
+        p {
+          margin-left: 22px;
+          color: $home-page-header-blue;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          margin: auto;
+        }
+      }
+      .hbspt-form {
+        height: 110px;
+        .submitted-message {
+          margin: 20px 0 40px 20px;
+        }
+        .hs-form-private {
+          display: flex;
+          margin-top: 20px;
+          margin-bottom: 40px;
+          flex-wrap: wrap;
+          .hs_email {
+            order: 1;
+            width: 70%;
+            label {
+              display: none;
+            }
+            .input {
+              .hs-input {
+                height: 50px;
+                border-radius: 5px;
+                border: 1px solid $home-page-border-grey;
+                background: #FFF;
+                margin-right: 20px;
+                width: 100%;
+                max-width: 400px;
+                padding-left: 20px;
+                ::placeholder {
+                  color: $home-page-grey-text;
+                  font-size: 16px;
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: normal;
+                }
+              }
+            }
+            ul.hs-error-msgs {
+              display: none;
+              height: 36px;
+            }
+          }
+          .hs_error_rollup {
+            width: 100%;
+            order: 4;
+            display: flex;
+            .hs-error-msgs {
+              height: 36px;
+              margin-bottom: -36px;
+              list-style-type: none;
+              li {
+                margin-top: 6px;
+                color: $brand-darker-bg;
+              }
+
+            }
+          }
+          .hs_submit {
+            order: 2;
+            width: 30%;
+
+            .actions {
+              width: 100%;
+                max-width: 138px;
+              .hs-button {
+                height: 50px;
+                display: inline-flex;
+                align-items: flex-start;
+                border-radius: 5px;
+                background: $brand-darker-bg;
+                color: #FFF;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                text-transform: uppercase;
+                justify-content: center;
+                border: unset;
+                width: 100%;
+                max-width: 138px;
+              }
+            }
+          }
+        }
+
+      }
 
     }
 
     .home-page-social-links {
-      width: 50%;
-      color: green;
+      display: flex;
+      padding-left: 95px;
+      flex-direction: column;
+      .social-links-heading {
+        margin-top: 40px;
+        h3 {
+          color: $home-page-header-blue;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          margin-bottom: 0;
+        }
+      }
+      .social-links-buttons {
+        display: flex;
+        margin-top: 20px;
+        a {
+          margin-right: 20px;
+          text-decoration: none;
+          display: flex;
+          padding: 13px 20px;
+          align-items: center;
+          gap: 10px;
+          border-radius: 3px;
+          color: white;
+          font-size: 16px;
+          font-weight: 700;
+        }
+        .facebook-button {
+          background: $home-page-facebook-blue;
+        }
+        .linkedin-button {
+          background: $home-page-linkedin-blue;
+        }
+        .twitter-button {
+          background: $home-page-twitter-blue;
+        }
+      }
     }
   }
 }
