--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -49,3 +49,6 @@ $home-page-grey-lite: #F0F5F7;
 $home-page-border-grey: #DFE5EC;
 $home-page-dark-blue: #000C1B;
 $home-page-video-player-blue: #0C8CE9;
+$home-page-facebook-blue: #395492;
+$home-page-linkedin-blue: #0A66C2;
+$home-page-twitter-blue: #00A5E3;
