Fix background css on feature flagged areas (#1840)
* use bodyclass to add in a special background for pages when feature flags are on

* Update home_page.html

remove spaces from body class

* Update product_page.html

change bodyclass block

* Update product_page.html

wrong variables

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block bodyclass %}{% if new_design %}new-design{% endif %}{% endblock %}
 
 {% load static wagtail_img_src feature_img_src %}
 {% load wagtailcore_tags wagtailembeds_tags %}
