--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -161,24 +161,25 @@
 {% if show_home_page_contact_form %}
   <div class="home-page-contact-row">
     <div class="home-page-contact-row-container">
-      <div class="home-page-hbspt-form-wrapper home-page-contact-col">
-        <div class="home-page-hbspt-form-heading-row">
-          <h3>Sign up for updates</h3>
-          <p>Join our newsletter for course updates and more.</p>
-        </div>
-        <script
-              defer
-              charset="utf-8"
-              type="text/javascript"
-              src="//js.hsforms.net/forms/v2-legacy.js"
-            ></script>
-        <script
-          defer
-          charset="utf-8"
-          type="text/javascript"
-          src="//js.hsforms.net/forms/v2.js"
-        ></script>
-        <script type="text/javascript">
+      <div class="home-page-contact-col">
+        <div class="home-page-hbspt-form-wrapper">
+          <div class="home-page-hbspt-form-heading-row">
+            <h3>Sign up for updates</h3>
+            <p>Join our newsletter for course updates and more.</p>
+          </div>
+          <script
+                defer
+                charset="utf-8"
+                type="text/javascript"
+                src="//js.hsforms.net/forms/v2-legacy.js"
+              ></script>
+          <script
+            defer
+            charset="utf-8"
+            type="text/javascript"
+            src="//js.hsforms.net/forms/v2.js"
+          ></script>
+          <script type="text/javascript">
             document.addEventListener('DOMContentLoaded', function() {
                 if (typeof hbspt !== 'undefined') {
                     hbspt.forms.create({
@@ -188,15 +189,18 @@
                 }
             });
         </script>
-      </div>
-      <div class="home-page-social-links home-page-contact-col">
-        <div class="social-links-heading">
-          <h3>Connect with us</h3>
         </div>
-        <div class="social-links-buttons">
-          <a role="button" class="button--icon facebook-button" href="">Facebook</a>
-          <a role="button" class="button--icon linkedin-button" href="">linkedin</a>
-          <a role="button" class="button--icon twitter-button" href="">Twitter</a>
+      </div>
+      <div class="home-page-contact-col">
+        <div class="home-page-social-links">
+          <div class="social-links-heading">
+            <h3>Connect with us</h3>
+          </div>
+          <div class="social-links-buttons">
+            <a role="button" class="button--icon facebook-button" href="">Facebook</a>
+            <a role="button" class="button--icon linkedin-button" href="">linkedin</a>
+            <a role="button" class="button--icon twitter-button" href="">Twitter</a>
+          </div>
         </div>
       </div>
     </div>
