add to features.py, merge and fix some wonk

--- a/frontend/public/scss/home-page/home-page-contact-row.scss
+++ b/frontend/public/scss/home-page/home-page-contact-row.scss
@@ -73,7 +73,10 @@ body.new-design {
         }
       }
       .hbspt-form {
-        height: 150px;
+        height: 110px;
+        @include media-breakpoint-down(md) {
+          height: 150px;
+        }
         .submitted-message {
           margin: 20px 0 40px 20px;
         }
