--- a/frontend/public/scss/home-page/home-page-contact-row.scss
+++ b/frontend/public/scss/home-page/home-page-contact-row.scss
@@ -221,6 +221,7 @@ body.new-design {
 
           @include media-breakpoint-down(md) {
             font-size: 12px;
+            margin-right: 0;
           }
         }
         .facebook-button {
