add outer overlay + style desktop and mobile

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -10,18 +10,20 @@
 {% if show_new_design_hero %}
   <div class="home-page-hero-row d-flex justify-content-md-center align-items-md-center">
     <div class="home-page-hero hero-container col-12">
-      <div class="home-page-hero-overlay container hero-content d-flex justify-content-md-end align-items-md-end">
+      <div class="home-page-hero-overlay container hero-content">
+        <div class="hero-fade hero-fade-left"> </div>
         <div class="hero-title hero-text">
-            <h1>MITx Online</h1>
-            <h2>Open Online Courses - from MIT</h2>
-            <p>
-              Learners anywhere in the world can enroll in a course of their choosing and <br>
-              <b>learn for free</b>, or <b>aim to earn a certificate for a low fee</b>.
-            </p>
+          <h1>MITx Online</h1>
+          <h2>Open Online Courses - from MIT</h2>
+          <p>
+            Learners anywhere in the world can enroll in a course of their choosing and
+            <b>learn for free</b>, or <b>aim to earn a certificate for a low fee</b>.
+          </p>
+          <div class="hero-button-container">
+            <a role="button" class="hero-explore-button" href="/catalog">Explore Courses</a>
+          </div>
         </div>
-        <div class="hero-button-container">
-          <a role="button" class="hero-explore-button" href="/catalog">Explore Courses</a>
-        </div>
+        <div class="hero-fade hero-fade-right"> </div>
       </div>
     </div>
   </div>
