--- a/frontend/public/scss/home-page/home-page-hero.scss
+++ b/frontend/public/scss/home-page/home-page-hero.scss
@@ -4,96 +4,131 @@ body.new-design {
 .home-page-hero-row {
   width: 100%;
   height: 600px;
+  background: $home-page-dark-blue;
+  @include media-breakpoint-down(md) {
+    width: 100%;
+    height: 470px;
+  }
   @include media-breakpoint-down(sm) {
     width: 100%;
-    height: 300px;
+    height: 294px;
   }
 
   .home-page-hero {
     max-width: 1440px;
     max-height: 600px;
     flex-shrink: 0;
-    background: url("/static/images/home-page-hero-image.png") lightgray 50% 50% / cover no-repeat content-box;
+    background: url("/static/images/home-page-hero-image.png") $home-page-dark-blue 50% 50% / cover no-repeat content-box;
     padding-bottom: 0;
     margin: 0 auto;
     @include media-breakpoint-down(md) {
       max-width: 100%;
-    }
-
-    @include media-breakpoint-down(sm) {
-      max-width: 100%;
-      max-height: 147px;
+      max-height: 300px;
       background-position-y: top;
       background-position-x: 0;
+    }
+    @include media-breakpoint-down(sm) {
+      max-height: 147px;
     }
 
     .home-page-hero-overlay {
       max-width: 1440px;
       height: 600px;
-      border-bottom: 1px solid #491EA4;
-      background: linear-gradient(270deg, rgba(0, 0, 0, 0.90) 0%, rgba(0, 0, 0, 0.00) 100%) content-box;
+      border-bottom: 1px solid $home-page-border-purple;
+      background: linear-gradient(270deg, rgba(0, 0, 0, 0.90) 0%, rgba(0, 0, 0, 0.00) 100%);
       padding: 0;
       display: flex;
-      flex-direction: column;
-      @include media-breakpoint-down(sm) {
+      flex-direction: row;
+      justify-content: space-between;
+      @include media-breakpoint-down(md) {
+        flex-direction: column;
         align-self: start;
         max-width: 100%;
+        max-height: 300px;
+      }
+      @include media-breakpoint-down(sm) {
         max-height: 147px;
       }
-
+      .hero-fade {
+        height: 37.5rem;
+        width: 15.625rem;
+        @include media-breakpoint-down(md) {
+          display: none;
+        }
+      }
+      .hero-fade-left{
+        background: linear-gradient(90deg, $home-page-dark-blue 0%, rgba(0, 12, 27, 0.00) 100%);
+        justify-self: start;
+      }
+      .hero-fade-right{
+        background: linear-gradient(270deg, $home-page-dark-blue 0%, rgba(0, 12, 27, 0.00) 100%);
+        margin-left: -33.31rem;
+      }
       .hero-title {
         background: none;
         max-width: 650px;
-        width: 650px;
-        padding: 0;
+        width: 45%;
+        height: 37.5rem;
+        padding: 0 0 0 7.778%;
         margin-bottom: 50px;
-        @include media-breakpoint-down(sm) {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        z-index: 999;
+        @include media-breakpoint-down(lg) {
+          padding: 0;
+          margin-left: -15rem;
+        }
+        @include media-breakpoint-down(md) {
+          width: 100%;
           max-width: 100%;
           background: $home-page-header-blue;
-          margin-top: 147px;
-          margin-bottom: 0;
-          display: flex;
-          flex-direction: column;
+          height: unset;
+          margin: 300px 0 0 0;
           justify-content: center;
         }
-
+        @include media-breakpoint-down(sm) {
+          margin-top: 147px;
+        }
         h1 {
           color: #FFF;
           font-size: 65px;
           font-style: normal;
           font-weight: 700;
           line-height: normal;
-          @include media-breakpoint-down(sm) {
+          margin-bottom: .8rem;
+          @include media-breakpoint-down(xl) {
+            font-size: 50px;
+          }
+          @include media-breakpoint-down(md) {
             font-size: 25px;
             margin-top: 20px;
             text-align: center;
           }
         }
-
         h2 {
-          color: #03ADD2;
+          color: $home-page-subheader-light-blue;
           font-size: 24px;
           font-style: normal;
           font-weight: 500;
           line-height: normal;
           text-transform: uppercase;
-          margin-bottom: 50px;
-          @include media-breakpoint-down(sm) {
+          margin-bottom: 3.5rem;
+          @include media-breakpoint-down(md) {
             font-size: 14px;
             text-align: center;
             margin-bottom: 0;
             padding-bottom: 68px;
           }
         }
-
         p {
           color: #FFF;
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
           line-height: 25px;
-          margin-bottom: 0;
-          @include media-breakpoint-down(sm) {
+          margin-bottom: 3.31rem;
+          @include media-breakpoint-down(md) {
             display: none;
           }
         }
@@ -103,11 +138,11 @@ body.new-design {
         padding-bottom: 93px;
         display: flex;
         justify-items: start;
-        width: 650px;
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(md) {
           width: 100%;
           margin-top: -55px;
-          justify-items: center;
+          justify-content: center;
+          padding-bottom: 25px;
         }
 
         .hero-explore-button {
