--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -49,3 +49,5 @@ $home-page-grey-lite: #F0F5F7;
 $home-page-border-grey: #DFE5EC;
 $home-page-dark-blue: #000C1B;
 $home-page-video-player-blue: #0C8CE9;
+$home-page-border-purple: #491EA4;
+$home-page-subheader-light-blue: #03ADD2;
