Some stuff to make this not actually feature-flagged
- Don't conditionally apply styles. Instead, always include the v2 styles (in product-page/).
- New styles are wrapped to only take effect if the body tag has the `new-design` class (which does get toggled by the feature flag)
- Started on removing duplication but will take a bit

The plan is to just leave the new design specific stuff wrapped in the body.new-design and then when it's time to eliminate the flag, pull that wrapper then use a linter or something to find the classes that aren't being used anymore.

--- a/frontend/public/scss/product-page/user-menu.scss
+++ b/frontend/public/scss/product-page/user-menu.scss
@@ -1,88 +1,7 @@
 // sass-lint:disable mixins-before-declarations
-.profile-image {
-  border-radius: 100%;
-  background-color: $cornflower-blue;
-  color: $white;
-  width: 34px;
-  height: 34px;
-  overflow: hidden;
-}
 
-.collapsed.dropdown-toggle::after {
-  border-top: 0.3em solid transparent;
-  border-left: 0.3em solid;
-  border-bottom: 0.3em solid transparent;
-  border-right: 0;
-  vertical-align: unset;
-}
-
-.user-menu .dropdown-menu {
-  margin-top: 27px;
-  padding: 0;
-  display: none;
-
-  &.show {
-    display: block;
+body.new-design {
+  .user-menu .dropdown-menu .show {
     z-index: 2000;
-  }
-}
-
-.user-menu.dropdown {
-  @include media-breakpoint-down(sm) {
-    display: none;
-  }
-  .dropdown-toggle.user-menu-button {
-    &.show {
-      &:after {
-        border-color: $primary;
-        transform: rotate(45deg);
-        margin-top: 1px;
-      }
-    }
-  }
-
-  .dropdown-toggle {
-    max-width: 40ch;
-    padding: 0px;
-    font-weight: 600;
-    text-overflow: ellipsis;
-    position: relative;
-    padding-right: 20px;
-
-    &:after {
-      border: 2px;
-      border-top: 2px solid black;
-      border-left: 2px solid black;
-      width: 10px;
-      height: 10px;
-      transform: rotate(225deg);
-      margin-left: 10px;
-      margin-top: -5px;
-      display: inline-block;
-      vertical-align: middle;
-      position: absolute;
-      right: 2px;
-      top: 10px;
-    }
-
-    &:hover {
-      cursor: pointer;
-    }
-  }
-}
-
-.icon-dashboard {
-  background: url("#{$static-path}/images/icon-dashboard.png") left no-repeat;
-  height: 25px;
-  width: 25px;
-}
-
-.user-menu-button {
-
-  @include media-breakpoint-down(sm) {
-    display: none;
-  }
-
-  border-color: transparent;
-  background-color: inherit;
+  }  
 }
