--- a/frontend/public/scss/product-page/product-faculty-members.scss
+++ b/frontend/public/scss/product-page/product-faculty-members.scss
@@ -1,71 +1,73 @@
 // sass-lint:disable mixins-before-declarations
-.faculty-section {
-  margin: 0 0 35px;
-
-  h2 {
+body.new-design {
+  .faculty-section {
     margin: 0 0 35px;
 
-    @include media-breakpoint-down(sm) {
-      margin: 0 0 27px;
+    h2 {
+      margin: 0 0 35px;
+
+      @include media-breakpoint-down(sm) {
+        margin: 0 0 27px;
+      }
     }
   }
-}
 
-.faculty-members {
-  li {
-    @include media-breakpoint-down(md) {
-      width: calc(100% - 44px);
-    }
+  .faculty-members {
+    li {
+      @include media-breakpoint-down(md) {
+        width: calc(100% - 44px);
+      }
 
-    width: calc(50% - 44px);
-    margin: 0 22px 24px;
+      width: calc(50% - 44px);
+      margin: 0 22px 24px;
 
-    .member-card {
-      padding: 24px;
-      overflow: hidden;
-      border-radius: 4px !important;
-      box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
-
-      .member-info {
+      .member-card {
+        padding: 24px;
         overflow: hidden;
-        margin-top: 7px;
+        border-radius: 4px !important;
+        box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
 
-        @include media-breakpoint-down(md) {
-          margin-top: 20px;
-        }
+        .member-info {
+          overflow: hidden;
+          margin-top: 7px;
 
-        p {
-          font-size: 14px;
-        }
+          @include media-breakpoint-down(md) {
+            margin-top: 20px;
+          }
 
-        .description {
           p {
-            margin: 0;
-            color: $label-subtitle;
+            font-size: 14px;
+          }
+
+          .description {
+            p {
+              margin: 0;
+              color: $label-subtitle;
+            }
+          }
+        }
+
+        &:hover {
+          h3 {
+            color: $brand-button-bg;
           }
         }
       }
 
-      &:hover {
-        h3 {
-          color: $brand-button-bg;
+      img {
+        float: left;
+        height: 110px;
+        width: 110px;
+        border-radius: 5px;
+        object-fit: cover;
+        object-position: 50% 0;
+        margin-right: 24px;
+
+        @include media-breakpoint-down(sm) {
+          display: block;
+          float: none;
+          margin: 0 auto 10px;
         }
-      }
-    }
-
-    img {
-      float: left;
-      height: 110px;
-      width: 110px;
-      border-radius: 5px;
-      object-fit: cover;
-      object-position: 50% 0;
-      margin-right: 24px;
-
-      @include media-breakpoint-down(sm) {
-        display: block;
-        float: none;
-        margin: 0 auto 10px;
       }
     }
   }
