--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -31,6 +31,8 @@
 @import "home-page/featured-product-cards";
 @import "home-page/home-page-hero";
 @import "home-page/home-page-video-component";
+@import "home-page/home-page-contact-row";
+
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
