--- a/frontend/public/scss/home-page/featured-product-cards.scss
+++ b/frontend/public/scss/home-page/featured-product-cards.scss
@@ -6,6 +6,7 @@
   margin: 0;
   font-style: normal;
   font-weight: 700;
+  font-family: Poppins, sans-serif;
   line-height: normal;
   padding: 60px 0 33px 0;
   @include media-breakpoint-down(sm) {
@@ -62,6 +63,7 @@
         font-style: normal;
         font-weight: 700;
         line-height: normal;
+        font-family: Poppins, sans-serif;
         @include media-breakpoint-down(sm) {
           width: 176px;
           font-size: 18px;
@@ -166,6 +168,7 @@
                   font-size: 12px;
                   font-style: normal;
                   font-weight: 400;
+                  font-family: Inter, sans-serif;
                   line-height: normal;
                   margin-bottom: 5px;
                 }
@@ -178,6 +181,7 @@
                   font-size: 14px;
                   font-style: normal;
                   font-weight: 700;
+                  font-family: Inter, sans-serif;
                   line-height: normal;
                   margin-top: 0;
                 }
@@ -245,6 +249,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 600;
+        font-family: Poppins, sans-serif;
         line-height: normal;
         background-color: transparent;
         align-self: center;
