--- a/frontend/public/scss/home-page/home-page-hero.scss
+++ b/frontend/public/scss/home-page/home-page-hero.scss
@@ -94,6 +94,7 @@ body.new-design {
           color: #FFF;
           font-size: 65px;
           font-style: normal;
+          font-family: Poppins, sans-serif;
           font-weight: 700;
           line-height: normal;
           margin-bottom: .8rem;
@@ -110,7 +111,8 @@ body.new-design {
           color: $home-page-subheader-light-blue;
           font-size: 24px;
           font-style: normal;
-          font-weight: 500;
+          font-family: Poppins, sans-serif;
+          font-weight: 400;
           line-height: normal;
           text-transform: uppercase;
           margin-bottom: 3.5rem;
@@ -125,6 +127,7 @@ body.new-design {
           color: #FFF;
           font-size: 16px;
           font-style: normal;
+          font-family: Inter, sans-serif;
           font-weight: 400;
           line-height: 25px;
           margin-bottom: 3.31rem;
@@ -155,6 +158,7 @@ body.new-design {
           background: $brand-darker-bg;
           color: #FFF;
           text-align: center;
+          font-family: Inter, sans-serif;
           font-size: 20px;
           font-style: normal;
           font-weight: 700;
