--- a/frontend/public/scss/home-page/home-page-video-component.scss
+++ b/frontend/public/scss/home-page/home-page-video-component.scss
@@ -34,6 +34,7 @@
         font-size: 36px;
         font-style: normal;
         font-weight: 700;
+        font-family: Poppins, sans-serif;
         line-height: 45px;
         align-self: stretch;
         @include media-breakpoint-down(sm) {
@@ -44,6 +45,7 @@
 
       p {
         color: $home-page-header-blue;
+        font-family: Inter, sans-serif;
         font-size: 20px;
         font-style: normal;
         font-weight: 400;
