Cleaning up faculty members, fixing margin on the course program listing

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -162,6 +162,7 @@ body.new-design {
         }
 
         .program-info-box {
+          margin: 10px 12px;
           ul {
             margin-top: 1em;
           }
