--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -35,6 +35,7 @@
 @import "product-page/product-details";
 @import "product-page/product-faculty-members";
 @import "home-page/home-page-contact-row";
+@import "product-page/program-courses.scss";
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
